[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/fonts/Roboto-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/sprites/nanner.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/basefont.tres" type="DynamicFont" id=3]
[ext_resource path="res://levels/Shop.gd" type="Script" id=4]
[ext_resource path="res://assets/sprites/item_frame_1.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/vines_frame.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/monkey_1.png" type="Texture" id=13]

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "close"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1 ), Vector2( 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=7]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
size = 30
font_data = ExtResource( 1 )

[node name="Shop" type="TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_scale = Vector2( 1e-05, 1 )
rect_pivot_offset = Vector2( 510, 300 )
texture = ExtResource( 6 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 6 )
anims/close = SubResource( 8 )
anims/open = SubResource( 5 )

[node name="back" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -50.0
margin_top = -54.0
margin_right = 50.0
custom_fonts/font = SubResource( 7 )
text = "Back"

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 48.0
margin_right = 149.0
margin_bottom = 108.0
custom_fonts/font = SubResource( 9 )
text = "Monkey Shop"

[node name="items" type="Label" parent="."]
margin_left = 771.0
margin_top = 130.0
margin_right = 846.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 10 )
text = "Items"

[node name="item_ItemList" type="ItemList" parent="items"]
margin_left = -76.0
margin_top = 49.0
margin_right = 150.0
margin_bottom = 369.0
max_text_lines = 2
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2( 64, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="upgrades" type="Label" parent="."]
margin_left = 117.0
margin_top = 130.0
margin_right = 244.0
margin_bottom = 166.0
custom_fonts/font = SubResource( 10 )
text = "Upgrades"

[node name="upgrade_ItemList" type="ItemList" parent="upgrades"]
margin_left = 5.0
margin_top = 58.0
margin_right = 245.0
margin_bottom = 364.0

[node name="naner_icon" type="TextureRect" parent="."]
margin_left = 461.0
margin_top = 132.0
margin_right = 539.0
margin_bottom = 202.0
texture = ExtResource( 2 )
expand = true

[node name="Label" type="Label" parent="naner_icon"]
margin_left = -25.0
margin_top = 95.0
margin_right = 120.0
margin_bottom = 119.0
grow_horizontal = 2
custom_fonts/font = ExtResource( 3 )
text = "you have no naners today"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="monkeybux_icon" type="TextureRect" parent="."]
margin_left = 471.0
margin_top = 286.0
margin_right = 549.0
margin_bottom = 356.0
rect_rotation = 90.0
rect_pivot_offset = Vector2( 32, 32 )
texture = ExtResource( 13 )
expand = true

[node name="Label" type="Label" parent="monkeybux_icon"]
margin_left = 96.0
margin_top = 105.0
margin_right = 241.0
margin_bottom = 129.0
grow_horizontal = 2
rect_rotation = -90.0
custom_fonts/font = ExtResource( 3 )
text = "monkeybux"
align = 1

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]
[connection signal="item_activated" from="items/item_ItemList" to="." method="_on_item_ItemList_item_activated"]
[connection signal="item_activated" from="upgrades/upgrade_ItemList" to="." method="_on_upgrade_ItemList_item_activated"]
